# notepad

./: CMakeLists.txt
cmake/: FindSkia.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cc
src/base/: CMakeLists.txt  signal.h  time.cc  time.h
src/os/: CMakeLists.txt  event.h  keys.h  point.h  window.cc  window.h
src/os/priv/: event.h  x11.cc
src/os/priv/skia/: skia_surface.h
src/os/priv/win/: window.h
src/os/priv/x11/: window.h  x11.cc  x11.h
